style bug on iphone 4s V final

--- a/src/Game.css
+++ b/src/Game.css
@@ -40,7 +40,8 @@
 
 
 .Game-row-score {
-  min-width: 10vw;
+  width: 10vw;
+  min-width: 20px;
   display: flex;
   justify-content: space-around;
 }
@@ -50,19 +51,19 @@
   height: 0;
   width: 0;
 
-  margin: 5px 0;
+  margin: 9px 0;
 }
 
 .score-dot-black {
-  border: 10px solid black;
+  border: 6px solid black;
 }
 
 .score-dot-pink {
-  border: 10px solid pink;
+  border: 6px solid pink;
 }
 
 .score-dot-white {
-  border: 10px solid white;
+  border: 6px solid white;
 }
 
 .guessed-dot {
